# agent-practice

./: .gitignore  LICENSE  README.md  SPEC.md  main.py  pyproject.toml  test_installation.py
bedrock-agent-cdk/: .gitignore  DEPLOYMENT.md  README.md  cdk.json  package.json  tsconfig.json
bedrock-agent-cdk/assets/action-group-schemas/: business-operations-schema.json  utility-services-schema.json
bedrock-agent-cdk/assets/sample-documents/: company-handbook.txt  product-documentation.md
bedrock-agent-cdk/lambda/: action-group-handler.py  api-gateway-handler.py
bedrock-agent-cdk/lib/: api-gateway-stack.ts  bedrock-agent-stack.ts  bedrock-guardrails-stack.ts  bedrock-knowledge-base-stack.ts  lambda-function-stack.ts
bedrock-agent-cdk/scripts/: deploy.sh  test-agent.py
bedrock-agent-cdk/test/: bedrock-agent.test.ts  setup.ts
bedrock-agent-example/: README.md
bedrock-agent-example/lib/: bedrock-agent-stack.ts
docs/: 01_architecture_overview.md  02_memory_systems.md  03_state_management.md  04_pattern1_parallel_unreliable.md  06_pattern3_sequential_reliable.md  10_pattern_comparison.md  11_basic_usage.md  README.md
examples/: basic_usage.py  compare_all_patterns.py  pattern1_parallel_unreliable.py  pattern2_parallel_shared.py  pattern3_sequential_reliable.py  pattern3_sequential_reliable_enhanced.py  pattern4_sequential_compressed.py  pattern4_sequential_compressed_enhanced.py  with_memory_persistence.py
src/multi_agent_task_breakdown/: __init__.py  cli.py  config.py  orchestrator.py  state.py
src/multi_agent_task_breakdown/agents/: base_nodes.py  (+1 more)
(+5 files in other folders)
